added jwt token for register and user save to db successfully return a response
