# src/routes/index.js
@@ -1,7 +1,18 @@
-const {controllers : articleControllers} = require('../api/v1/article/')
-
 const router = require('express').Router()
+const {controllers : articleControllers} = require('../api/v1/article/')
+const {controllers:authControllers} = require('../api/v1/auth')
 
+
+
+// Auth Routers
+
+router.route('/api/v1/auth/login').post(authControllers.login)
+router.route('/api/v1/auth/regeister').post(authControllers.regeister)
+
+
+
+
+// Article Routers
 
 router.route('/api/v1/articles')
 .get(articleControllers.findAll)
